# simple-pipe

./: .dockerignore  .gitignore  README.md  pyproject.toml  run_tests_locally.sh  run_tests_locally_docker.sh
.github/workflows/: ci.yaml
api/: models.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py
infra/: Dockerfile  docker-compose.yml  entrypoint.sh  init_user_table.sql
integration-tests/: response-check.py
simple/: settings.py  urls.py
