[tool.poetry]
name = "simple"
version = "0.1.0"
description = "My simple Django app"
authors = ["Rinat <rinat@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.2"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest-django = "^4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"